k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crudlab-nginx
  namespace: crudlab
  labels:
    app: crudlab-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crudlab-nginx
  template:
    metadata:
      labels:
        app: crudlab-nginx
    spec:
      containers:
        - name: nginx
          image: localhost:5000/crudlab-nginx:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
