k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crudlab-app
  namespace: crudlab
spec:
  selector:
    app: crudlab-app
  ports:
    - port: 8080
      targetPort: 8080
